fix vertical align after changes by www

--- a/web/themes/dcamp_2017_theme/scss/layout/_frontpage.scss
+++ b/web/themes/dcamp_2017_theme/scss/layout/_frontpage.scss
@@ -329,7 +329,6 @@
           text-align: center;
           img {
             height: auto;
-            max-height: 100px;
             width: auto;
             vertical-align: middle;
           }
